#9 cleanup and deduplication

--- a/docs/api-reference/CRMScript.Native.SearchEngine.yml
+++ b/docs/api-reference/CRMScript.Native.SearchEngine.yml
@@ -983,7 +983,7 @@ items:
   nameWithType: SearchEngine.insert()
   fullName: CRMScript.Native.SearchEngine.insert()
   type: Method
-  summary: "\nAfter adding the values of the fields, call this function to actually do the insert in the database. Returns the resulting ID of the insert.<p></p>\n<ul><li><strong>Returns:</strong>The ID of the newly added item</li></ul>\n"
+  summary: "\nAfter adding the values of the fields, call this function to actually do the insert in the database. Returns the resulting ID of the insert.\n"
   remarks: 
   syntax: 
     content: Integer insert()
