--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
@@ -148,7 +148,7 @@ items:
   nameWithType: NSArchiveListItem.SetColumnData(Map)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetColumnData(Map)
   type: Method
-  summary: "\nEach column data item contains a display value, a tooltip hint, a link hint, and an ORDERBY value.<p></p>\nThe display value is encoded by the<strong>CultureDataFormatter</strong>and can be decoded or localized by that class. All other values are optional.<p></p>\nTooltip hints can be passed to the<strong>TooltipProvider</strong>(Tooltip service) to be translated into an actual tooltip.\n"
+  summary: "\nEach column data item contains a display value, a tooltip hint, a link hint, and an ORDERBY value.<p></p>\nThe display value is encoded by the CultureDataFormatter and can be decoded or localized by that class. All other values are optional.<p></p>\nTooltip hints can be passed to the TooltipProvider (Tooltip service) to be translated into an actual tooltip.\n"
   remarks: 
   syntax: 
     content: Void SetColumnData(Map columnData)
