--- a/docs/api-reference/CRMScript.NetServer.NSBusiness.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBusiness.yml
@@ -29,14 +29,14 @@ items:
   nameWithType: NSBusiness.GetId()
   fullName: CRMScript.NetServer.NSBusiness.GetId()
   type: Method
-  summary: "\nGets the primary key (ID) for the NSBusiness<p></p>\n<strong>Returns:</strong>Integer NSBusiness id.<p></p>\n<pre><code>NSBusiness thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGets the primary key (ID) for the NSBusiness\n"
   remarks: 
   syntax: 
     content: Integer GetId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: NSBusiness ID
   example: 
   - "\n<pre><code>NSBusiness thing;\nInteger id = thing.GetId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBusiness.GetTooltip()
@@ -49,14 +49,14 @@ items:
   nameWithType: NSBusiness.GetTooltip()
   fullName: CRMScript.NetServer.NSBusiness.GetTooltip()
   type: Method
-  summary: "\nGets the tooltip description for the NSBusiness list item.<p></p>\n<strong>Returns:</strong>String NSBusiness tooltip description.<p></p>\n<pre><code>NSBusiness thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+  summary: "\nGets the tooltip description for the NSBusiness list item.\n"
   remarks: 
   syntax: 
     content: String GetTooltip()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: NSBusiness tooltip description.
   example: 
   - "\n<pre><code>NSBusiness thing;\nString descr = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBusiness.GetValue()
@@ -69,14 +69,14 @@ items:
   nameWithType: NSBusiness.GetValue()
   fullName: CRMScript.NetServer.NSBusiness.GetValue()
   type: Method
-  summary: "\nGets the name of the NSBusiness.<p></p>\n<strong>Returns:</strong>String NSBusiness name.<p></p>\n<pre><code>NSBusiness thing;\nString name = thing.GetValue();</code></pre>\n"
+  summary: "\nGets the name of the NSBusiness.\n"
   remarks: 
   syntax: 
     content: String GetValue()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: NSBusiness name
   example: 
   - "\n<pre><code>NSBusiness thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBusiness.#ctor
