--- a/docs/api-reference/CRMScript.NetServer.NSChatAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatAgent.yml
@@ -687,14 +687,14 @@ items:
   nameWithType: NSChatAgent.SaveChatTopicEntity(NSChatTopicEntity)
   fullName: CRMScript.NetServer.NSChatAgent.SaveChatTopicEntity(NSChatTopicEntity)
   type: Method
-  summary: "\nUpdates the existing NSChatTopicEntity or creates a new NSChatTopicEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>chatTopicEntity</strong>The NSChatTopicEntity to save.</li></ul>\n"
+  summary: "\nUpdates the existing NSChatTopicEntity or creates a new NSChatTopicEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSChatTopicEntity SaveChatTopicEntity(NSChatTopicEntity chatTopicEntity)
     parameters:
     - id: chatSessionEntity
       type: CRMScript.NetServer.NSChatSessionEntity
-      description:
+      description: The NSChatTopicEntity to save.
     return:
       type: CRMScript.NetServer.NSChatTopicEntity
   example: 
