--- a/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
@@ -134,7 +134,7 @@ items:
       description: The name of the destination contact
     - id: destinationContactDepartment
       type: CRMScript.Global.String
-      description:  The department of the destination contact
+      description: The department of the destination contact
     - id: copyPersons
       type: CRMScript.Global.Bool
       description: If true, persons will be copied from source contact
@@ -514,7 +514,7 @@ items:
   nameWithType: NSContactAgent.GetMyContacts()
   fullName: CRMScript.NetServer.NSContactAgent.GetMyContacts()
   type: Method
-  summary: "\nGets the contacts where the user currently logged in is set as contact owner.<p></p>\n<strong>Returns:</strong>NSContact[]<p></p>\n<pre><code>NSContactAgent agent;\nNSContact[] res = agent.GetMyContacts();</code></pre>\n"
+  summary: "\nGets the contacts where the user currently logged in is set as contact owner.\n"
   remarks: 
   syntax: 
     content: NSContact[] GetMyContacts()
