--- a/docs/api-reference/CRMScript.NetServer.NSCustomerServiceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerServiceAgent.yml
@@ -644,14 +644,14 @@ items:
   nameWithType: NSCustomerServiceAgent.SaveMailboxEntity(NSMailboxEntity)
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.SaveMailboxEntity(NSMailboxEntity)
   type: Method
-  summary: "\nUpdates the existing NSMailboxEntity or creates a new NSMailboxEntity if the ID parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>mailboxEntity</strong>The NSMailboxEntity to save.\n"
+  summary: "\nUpdates the existing NSMailboxEntity or creates a new NSMailboxEntity if the ID parameter is 0\n"
   remarks: 
   syntax: 
     content: NSMailboxEntity SaveMailboxEntity(NSMailboxEntity mailboxEntity)
     parameters:
     - id: mailboxEntity
       type: CRMScript.NetServer.NSMailboxEntity
-      description:
+      description: The NSMailboxEntity to save.
     return:
       type: CRMScript.NetServer.NSMailboxEntity
       description:
