--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
@@ -347,7 +347,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentTemplate.SetDirection(NSDocTmplDirection)
   type: Method
   summary: "\nSets the direction of a document template\n"
-  remarks: "\n<h3>Directions</h3><table><thead><tr><th>Enum</th><th>Direction</th><th>Description</th></tr></thead><tbody><tr><td>0</td><td>Unknown</td><td>The direction of documents from this template is unknown/undecided</td></tr><tr><td>1</td><td>Incoming</td><td>Document template for incoming documents</td></tr><tr><td>2</td><td>Outgoing</td><td>Document template is used for outgoing documents</td></tr><tr><td>3</td><td>SaintAll</td><td>All choice for Saint. This is NOT an acceptable value for a task definition, but is used by the Saint system for indexing all directions</td></tr></tbody></table><p>See EAppntDirection</p>\n"
+  remarks: "\n<h3>Directions</h3><table><thead><tr><th>Enum</th><th>Direction</th><th>Description</th></tr></thead><tbody><tr><td>0</td><td>Unknown</td><td>The direction of documents from this template is unknown/undecided</td></tr><tr><td>1</td><td>Incoming</td><td>Document template for incoming documents</td></tr><tr><td>2</td><td>Outgoing</td><td>Document template is used for outgoing documents</td></tr><tr><td>3</td><td>SaintAll</td><td>All choice for Saint. This is NOT an acceptable value for a task definition, but is used by the Saint system for indexing all directions</td></tr></tbody></table><p>See EAppntDirection\n"
   syntax: 
     content: Void SetDirection()
     parameters:
