--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
@@ -133,13 +133,14 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetDirection()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetDirection()
   type: Method
-  summary: "\n1 = incoming, 2 = outgoing, see EAppntDirection<p></p>\n<strong>Returns:</strong>NSDocTmplDirection<p></p>\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Incoming</li><li>Enum: 2 = Outgoing</li><li>Enum: 3 = SaintAll</li></ul><pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplDirection direction = thing.GetDirection();</code></pre>\n"
+  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Incoming</li><li>Enum: 2 = Outgoing</li><li>Enum: 3 = SaintAll</li></ul>\n"
   remarks: 
   syntax: 
     content: NSDocTmplDirection GetDirection()
     parameters: []
     return:
       type: CRMScript.NetServer.NSDocTmplDirection
+      description: 1 = incoming, 2 = outgoing, see EAppntDirection
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplDirection direction = thing.GetDirection();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetDocumentTemplateId()
@@ -272,13 +273,14 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetInvitationDocType()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetInvitationDocType()
   type: Method
-  summary: "\nType for sending email meeting invitation. Not an invitation type template = 0, New = 1, Changed = 2, Cancelled = 3<p></p>\n<strong>Returns:</strong>NSDocTmplInvitationType<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = New</li><li>Enum: 2 = Changed</li><li>Enum: 3 = Cancelled</li></ul><pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplInvitationType invitationDocType = thing.GetInvitationDocType();</code></pre>\n"
-  remarks: 
+  summary: "\nType for sending email meeting invitation.\n"
+  remarks: "<ul><li>Enum: 0 = None</li><li>Enum: 1 = New</li><li>Enum: 2 = Changed</li><li>Enum: 3 = Cancelled</li></ul>"
   syntax: 
     content: NSDocTmplInvitationType GetInvitationDocType()
     parameters: []
     return:
       type: CRMScript.NetServer.NSDocTmplInvitationType
+      description: Not an invitation type template = 0, New = 1, Changed = 2, Cancelled = 3
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplInvitationType invitationDocType = thing.GetInvitationDocType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetIsDefaultPublished()
@@ -291,14 +293,14 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetIsDefaultPublished()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetIsDefaultPublished()
   type: Method
-  summary: "\nPublished to external persons\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetIsDefaultPublished()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: Published to external persons
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nBool isDefaultPublished = thing.GetIsDefaultPublished();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetIsInUseInGuides()
@@ -391,8 +393,8 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetPrivacyDocType()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetPrivacyDocType()
   type: Method
-  summary: "\nIndicator that this document template has a functional role, related to privacy/GDPR<p></p>\n<strong>Returns:</strong>NSDocTmplPrivacyType<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = PersonRegistered</li></ul><pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplPrivacyType privacyDocType = thing.GetPrivacyDocType();</code></pre>\n"
-  remarks: 
+  summary: "\nIndicator that this document template has a functional role, related to privacy/GDPR\n"
+  remarks: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = PersonRegistered</li></ul>\n"
   syntax: 
     content: NSDocTmplPrivacyType GetPrivacyDocType()
     parameters: []
@@ -410,8 +412,8 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetQuoteDocType()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetQuoteDocType()
   type: Method
-  summary: "\nThe role this document plays in the Quote system, if any<p></p>\n<strong>Returns:</strong>NSDocTmplQuoteType<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = MailBody</li><li>Enum: 2 = MainDocument</li><li>Enum: 3 = QuoteLines</li><li>Enum: 4 = ConfirmationMailBody</li><li>Enum: 5 = ConfirmationLines</li></ul><pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplQuoteType quoteDocType = thing.GetQuoteDocType();</code></pre>\n"
-  remarks: 
+  summary: "\nThe role this document plays in the Quote system, if any\n"
+  remarks: "<ul><li>Enum: 0 = None</li><li>Enum: 1 = MailBody</li><li>Enum: 2 = MainDocument</li><li>Enum: 3 = QuoteLines</li><li>Enum: 4 = ConfirmationMailBody</li><li>Enum: 5 = ConfirmationLines</li></ul>"
   syntax: 
     content: NSDocTmplQuoteType GetQuoteDocType()
     parameters: []
@@ -429,14 +431,14 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetRank()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetRank()
   type: Method
-  summary: "\nRank order\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetRank()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Rank order
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetRecordType()
@@ -449,13 +451,14 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetRecordType()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetRecordType()
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref><p></p>\n<strong>Returns:</strong>NSDocTmplType\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSDocTmplType GetRecordType()
     parameters: []
     return:
       type: CRMScript.NetServer.NSDocTmplType
+      description: 1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplType recordType = thing.GetRecordType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetSaveInDb()
@@ -508,8 +511,8 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetSenderEmailMode()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetSenderEmailMode()
   type: Method
-  summary: "\nIf email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address<p></p>\n<strong>Returns:</strong>NSSenderMailMode<p></p>\n<ul><li>Enum: 0 = UseDefaultSender</li><li>Enum: 1 = UseOurContact</li><li>Enum: 2 = UseSupportContact</li><li>Enum: 3 = UseLoggedInUser</li></ul><pre><code>NSDocumentTemplateEntity thing;\nNSSenderMailMode senderEmailMode = thing.GetSenderEmailMode();</code></pre>\n"
-  remarks: 
+  summary: "\nIf email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address\n"
+  remarks: "\n<ul><li>Enum: 0 = UseDefaultSender</li><li>Enum: 1 = UseOurContact</li><li>Enum: 2 = UseSupportContact</li><li>Enum: 3 = UseLoggedInUser</li></ul>\n"
   syntax: 
     content: NSSenderMailMode GetSenderEmailMode()
     parameters: []
@@ -648,7 +651,7 @@ items:
   nameWithType: NSDocumentTemplateEntity.SetDirection()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection()
   type: Method
-  summary: "\nCRMScript method in the NSDocumentTemplateEntity class that sets the direction of a document template\n"
+  summary: "\nSets the direction of a document template\n"
   remarks: 
   syntax: 
     content: Void SetDirection()
@@ -800,7 +803,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetInvitationDocType()
   type: Method
   summary: "\nType for sending email meeting invitation. Not an invitation type template = 0, New = 1, Changed = 2, Cancelled = 3\n"
-  remarks: "\n<p>See enum invitationDocType.</p>\n"
+  remarks: "\nSee enum invitationDocType.\n"
   syntax: 
     content: Void SetInvitationDocType(NSDocTmplInvitationType invitationDocType)
     parameters:
@@ -927,7 +930,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType()
   type: Method
   summary: "\nIndicator that this document template has a functional role, related to privacy/GDPR\n"
-  remarks: "\n<p>See enum privacyDocType.</p>\n"
+  remarks: "\nSee enum privacyDocType.\n"
   syntax: 
     content: Void SetPrivacyDocType(NSDocTmplPrivacyType privacyDocType)
     parameters:
@@ -944,7 +947,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetQuoteDocType(NSDocTmplQuoteType)
   type: Method
   summary: "\nThe role this document plays in the Quote system, if any\n"
-  remarks: "\n<p>See enum quoteDocType.</p>\n"
+  remarks: "\nSee enum quoteDocType.\n"
   syntax: 
     content: Void SetQuoteDocType(NSDocTmplQuoteType quoteDocType)
     parameters:
@@ -1054,7 +1057,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode()
   type: Method
   summary: "\nIf email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address\n"
-  remarks: "\n<p>See enum senderEmailMode.</p>\n"
+  remarks: "\nSee enum senderEmailMode.\n"
   syntax: 
     content: Void SetSenderEmailMode(NSSenderMailMode senderEmailMode)
     parameters:
