--- a/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
@@ -110,7 +110,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetExtendedModuleLicenses()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetExtendedModuleLicenses()
   type: Method
-  summary: "\n<strong>Returns:</strong>NSExtendedModuleLicense[]<p></p>\n<pre><code>NSExtendedLicenseInfo thing;\nNSExtendedModuleLicense[] extendedModuleLicenses = thing.GetExtendedModuleLicenses();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSExtendedModuleLicense[] GetExtendedModuleLicenses()
