--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
@@ -103,7 +103,7 @@ items:
   nameWithType: NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   type: Method
-  summary: "\nDefault attachment ID value<p></p>\n<ul><li><strong>DefaultValue:</strong>Integer</li><li><strong>Returns:</strong>Void</li></ul>\n"
+  summary: "\nDefault attachment ID value\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer value)
