--- a/docs/api-reference/CRMScript.NetServer.NSFindAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFindAgent.yml
@@ -963,14 +963,14 @@ items:
   nameWithType: NSFindAgent.PopulateRestrictionValues(NSArchiveRestrictionInfo[])
   fullName: CRMScript.NetServer.NSFindAgent.PopulateRestrictionValues(NSArchiveRestrictionInfo[])
   type: Method
-  summary: "\nTakes an incoming set of Restrictions (name + operator + any user-entered values), and populates/expands all values as specified by the operator's ValueHints, taking into account any values already there. Used for dynamic date periods; perhaps others in the future<p></p>\n<ul><li><strong>Restrictions</strong>Restrictions to populate. The Name and Operator fields have to have valid content, and Values should be set as appropriate. Other fields can be left blank or null and will not be changed.</li></ul><strong>Returns:</strong>NSArchiveRestrictionInfo[]<p></p>\n<pre><code>NSFindAgent agent;\nNSArchiveRestrictionInfo[] restrictions;\nNSArchiveRestrictionInfo[] res = agent.PopulateRestrictionValues(restrictions);</code></pre>\n"
+  summary: "\nTakes an incoming set of Restrictions (name + operator + any user-entered values), and populates/expands all values as specified by the operator's ValueHints, taking into account any values already there. Used for dynamic date periods; perhaps others in the future\n"
   remarks: 
   syntax: 
     content: NSArchiveRestrictionInfo[] PopulateRestrictionValues(NSArchiveRestrictionInfo[] restrictions)
     parameters:
     - id: restrictions
       type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
-      description: 
+      description:  Restrictions to populate. The Name and Operator fields have to have valid content, and Values should be set as appropriate. Other fields can be left blank or null and will not be changed.
     return:
       type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
   example: 
