--- a/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
@@ -52,14 +52,14 @@ items:
   nameWithType: NSFreeText.GetAutoEnableTravelAreas()
   fullName: CRMScript.NetServer.NSFreeText.GetAutoEnableTravelAreas()
   type: Method
-  summary: "\ns\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetAutoEnableTravelAreas()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: Automatically enable free-text search for new travel area
+      description: Automatically enable free-text search for new travel areas
   example: 
   - "\n<pre><code>NSFreeText thing;\nBool autoEnableTravelAreas = thing.GetAutoEnableTravelAreas();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFreeText.GetCountWords()
