--- a/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
@@ -66,8 +66,8 @@ items:
   nameWithType: NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
   fullName: CRMScript.NetServer.NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
   type: Method
-  summary: "\nPopulates the ImportLines and columnDefs based from erp system<p></p>\n<ul><li><strong</li><li><strong>columns</strong>Columns.</li><li><strong>connectionId</strong>Connection id for Erp system</li><li><strong>erpActorType</strong>Erp Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul>\n"
-  remarks: 
+  summary: "\nPopulates the ImportLines and columnDefs based from ERP system\n"
+  remarks: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul>"
   syntax: 
     content: NSImportErpData CreateErpImportData(NSArchiveRestrictionInfo[] restriction, String[] columns, Integer connectionId, Integer erpActorType)
     parameters:
@@ -79,10 +79,10 @@ items:
       description: 
     - id: connectionId
       type: CRMScript.Global.Integer
-      description: 
+      description: Connection ID for ERP system
     - id: erpActorType
       type: CRMScript.Global.Integer
-      description: 
+      description: Erp Actor type
     return:
       type: CRMScript.NetServer.NSImportErpData
   example: 
