--- a/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
@@ -2854,7 +2854,7 @@ items:
   fullName: CRMScript.NetServer.NSListAgent.GetHierarchyFromPath(Integer,String,Bool)
   type: Method
   summary: "\nGets a hierarchy item from a path\n"
-  remarks: "\n<p>.</p>\n"
+  remarks: ""
   syntax: 
     content: NSHierarchyEntity GetHierarchyFromPath(Integer domain, String path, Bool children)
     parameters:
@@ -4124,14 +4124,14 @@ items:
   nameWithType: NSListAgent.GetReasonSold(Integer)
   fullName: CRMScript.NetServer.NSListAgent.GetReasonSold(Integer)
   type: Method
-  summary: "\nGets an NSReasonSold object.<p></p>\n<ul><li><strong>ReasonSoldId</strong>The identifier of the NSReasonSold object</li></ul>\n"
+  summary: "\nGets an NSReasonSold object.\n"
   remarks: 
   syntax: 
     content: NSReasonSold GetReasonSold(Integer reasonSoldId)
     parameters:
     - id: reasonSoldId
       type: CRMScript.Global.Integer
-      description: 
+      description: The identifier of the NSReasonSold object
     return:
       type: CRMScript.NetServer.NSReasonSold
   example: 
@@ -5449,7 +5449,7 @@ items:
   nameWithType: NSListAgent.SaveHierarchyEntity(NSHierarchyEntity)
   fullName: CRMScript.NetServer.NSListAgent.SaveHierarchyEntity(NSHierarchyEntity)
   type: Method
-  summary: "\nUpdates the existing NSHierarchyEntity or creates a new NSHierarchyEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>hierarchyEntity</strong></li></ul>\n"
+  summary: "\nUpdates the existing NSHierarchyEntity or creates a new NSHierarchyEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSHierarchyEntity SaveHierarchyEntity(NSHierarchyEntity hierarchyEntity)
