--- a/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
@@ -112,7 +112,7 @@ items:
   nameWithType: NSPocketDeviceInfo.GetOSVersion()
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
   type: Method
-  summary: "\n'\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetOSVersion()
