--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceDescriptionLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceDescriptionLine.yml
@@ -150,14 +150,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.GetPrefValue()
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
   type: Method
-  summary: "\ne\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPrefValue()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Possible valu
+      description: Possible value
   example: 
   - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString prefValue = thing.GetPrefValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescriptionLine.SetDescription(String)
