--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
@@ -108,14 +108,14 @@ items:
   nameWithType: NSPreviewMailingHeader.GetMessageId()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetMessageId()
   type: Method
-  summary: "\ny\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMessageId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Primary ke
+      description: Primary key
   example: 
   - "\n<pre><code>NSPreviewMailingHeader thing;\nInteger messageId = thing.GetMessageId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreviewMailingHeader.GetMessageSubject()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetNumClicks()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetNumClicks()
   type: Method
-  summary: "\n.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumClicks()
