--- a/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
@@ -676,14 +676,14 @@ items:
   nameWithType: NSQuoteLine.GetQuoteLineId()
   fullName: CRMScript.NetServer.NSQuoteLine.GetQuoteLineId()
   type: Method
-  summary: "\ny\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetQuoteLineId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Primary ke
+      description: Primary key
   example: 
   - "\n<pre><code>NSQuoteLine thing;\nInteger quoteLineId = thing.GetQuoteLineId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteLine.GetRank()
@@ -1123,7 +1123,7 @@ items:
     parameters:
     - id: code
       type: CRMScript.Global.String
-      description:  A value the salesmen use to quickly find the correct product. Is stored here if the user changes the value from the product in the price list, or just enters a QuoteLine without a product link.
+      description: A value the salesmen use to quickly find the correct product. Is stored here if the user changes the value from the product in the price list, or just enters a QuoteLine without a product link.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1365,7 +1365,7 @@ items:
     parameters:
     - id: extraField1
       type: CRMScript.Global.String
-      description:  A simple field for adding information that the Connector can provide, and that the quote document need to display.
+      description: A simple field for adding information that the Connector can provide, and that the quote document need to display.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1387,7 +1387,7 @@ items:
     parameters:
     - id: extraField2
       type: CRMScript.Global.String
-      description:  A simple field for adding information that the Connector can provide, and that the quote document need to display.
+      description: A simple field for adding information that the Connector can provide, and that the quote document need to display.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1585,7 +1585,7 @@ items:
     parameters:
     - id: productCategoryKey
       type: CRMScript.Global.String
-      description:  Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text. Is stored here if the user changes the value from the product in the price list, or just enters a QuoteLine without a product link.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text. Is stored here if the user changes the value from the product in the price list, or just enters a QuoteLine without a product link.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1629,7 +1629,7 @@ items:
     parameters:
     - id: productTypeKey
       type: CRMScript.Global.String
-      description:  Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text. Is stored here if the user changes the value from the product in the price list, or just enters a QuoteLine without a product link.
+      description: Either a ListId to an ID from a connector provided list, or, if the connection doesn't support lists, a text. Is stored here if the user changes the value from the product in the price list, or just enters a QuoteLine without a product link.
     return:
       type: CRMScript.Global.Void
   example: 
