--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionValidated.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionValidated.yml
@@ -154,7 +154,7 @@ items:
   nameWithType: NSQuoteVersionValidated.GetIsOk()
   fullName: CRMScript.NetServer.NSQuoteVersionValidated.GetIsOk()
   type: Method
-  summary: "\n \n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsOk()
