--- a/docs/api-reference/CRMScript.NetServer.NSSignedPublicKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSignedPublicKey.yml
@@ -128,14 +128,14 @@ items:
   nameWithType: NSSignedPublicKey.GetSignDate()
   fullName: CRMScript.NetServer.NSSignedPublicKey.GetSignDate()
   type: Method
-  summary: "\nD\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetSignDate()
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      description: ate when the the public key was signed. No Timezone.
+      description: Date when the the public key was signed. No Timezone.
   example: 
   - "\n<pre><code>NSSignedPublicKey thing;\nDateTime signDate = thing.GetSignDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSignedPublicKey.SetExpiryDate(DateTime)
