--- a/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
@@ -46,14 +46,14 @@ items:
   nameWithType: NSSmsConfig.GetDefaultSmsCountry()
   fullName: CRMScript.NetServer.NSSmsConfig.GetDefaultSmsCountry()
   type: Method
-  summary: "\nP\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDefaultSmsCountry()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: hone prefix, will default to the current users HomeCountryId.
+      description: Phone prefix, will default to the current users HomeCountryId.
   example: 
   - "\n<pre><code>NSSmsConfig thing;\nString defaultSmsCountry = thing.GetDefaultSmsCountry();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSmsConfig.GetNetServerSmsProvider()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: defaultSmsCountry
       type: CRMScript.Global.String
-      description:  Phone prefix, will default to the current users HomeCountryId.
+      description: Phone prefix, will default to the current users HomeCountryId.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -155,7 +155,7 @@ items:
     parameters:
     - id: netServerSmsProvider
       type: CRMScript.Global.String
-      description:  Name of the selected provider, i.e. CM, Compaya SMS (cpsms.dk), Intelecom SMS, PSWinCom SMS, SMS Teknik or TXTLocal.
+      description: Name of the selected provider, i.e. CM, Compaya SMS (cpsms.dk), Intelecom SMS, PSWinCom SMS, SMS Teknik or TXTLocal.
     return:
       type: CRMScript.Global.Void
   example: 
