--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
@@ -463,7 +463,7 @@ items:
     parameters:
     - id: isMilestone
       type: CRMScript.Global.Bool
-      description:  Is this a milestone activity
+      description: Is this a milestone activity
     return:
       type: CRMScript.Global.Void
   example: 
@@ -588,14 +588,14 @@ items:
   nameWithType: NSSuggestedAppointmentEntity.SetText(String)
   fullName: CRMScript.NetServer.NSSuggestedAppointmentEntity.SetText(String)
   type: Method
-  summary: "\nT\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetText(String text)
     parameters:
     - id: text
       type: CRMScript.Global.String
-      description: he suggested text of the new appointment
+      description: The suggested text of the new appointment
     return:
       type: CRMScript.Global.Void
   example: 
