--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -164,14 +164,14 @@ items:
   nameWithType: NSTaskListItem.GetIsDefaultAlldayEvent()
   fullName: CRMScript.NetServer.NSTaskListItem.GetIsDefaultAlldayEvent()
   type: Method
-  summary: "\nt\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsDefaultAlldayEvent()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if all day even
+      description: True if all day event
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nBool isDefaultAlldayEvent = thing.GetIsDefaultAlldayEvent();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetIsDefaultFree()
