--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -476,7 +476,7 @@ items:
   nameWithType: NSTicket.GetHasAttachment()
   fullName: CRMScript.NetServer.NSTicket.GetHasAttachment()
   type: Method
-  summary: "\n.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetHasAttachment()
@@ -1189,7 +1189,7 @@ items:
     parameters:
     - id: author
       type: CRMScript.Global.String
-      description:  A string representing the author of the ticket (same as author of first message).
+      description: A string representing the author of the ticket (same as author of first message).
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1255,7 +1255,7 @@ items:
     parameters:
     - id: categoryFullname
       type: CRMScript.Global.String
-      description:  The fullname (compiled from parents' names) for this category. E.g. 'norway/product A/support'.
+      description: The fullname (compiled from parents' names) for this category. E.g. 'norway/product A/support'.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1321,7 +1321,7 @@ items:
     parameters:
     - id: connectId
       type: CRMScript.Global.Integer
-      description:  If a ticket is connected to another ticket, this field is set to the ID of the 'master' ticket.
+      description: If a ticket is connected to another ticket, this field is set to the ID of the 'master' ticket.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1585,7 +1585,7 @@ items:
     parameters:
     - id: origin
       type: CRMScript.Global.Integer
-      description:  What is the origin of this ticket. See enum origin.
+      description: What is the origin of this ticket. See enum origin.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1717,7 +1717,7 @@ items:
     parameters:
     - id: personMiddleName
       type: CRMScript.Global.String
-      description:  Middle name or 'van' etc.
+      description: Middle name or 'van' etc.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2069,7 +2069,7 @@ items:
     parameters:
     - id: timeSpentExternally
       type: CRMScript.Global.Integer
-      description:  The total time (seconds) within the priority's office hours the ticket has been in a external waiting status (configurable), not including current state
+      description: The total time (seconds) within the priority's office hours the ticket has been in a external waiting status (configurable), not including current state
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2091,7 +2091,7 @@ items:
     parameters:
     - id: timeSpentInternally
       type: CRMScript.Global.Integer
-      description:  The total time (seconds) within the priority's office hours the ticket has been in an open status (configurable), not including current state
+      description: The total time (seconds) within the priority's office hours the ticket has been in an open status (configurable), not including current state
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2113,7 +2113,7 @@ items:
     parameters:
     - id: timeSpentQueue
       type: CRMScript.Global.Integer
-      description:  The total time (seconds) within the priority's office hours the ticket has been in a queue status, not including current state
+      description: The total time (seconds) within the priority's office hours the ticket has been in a queue status, not including current state
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2157,7 +2157,7 @@ items:
     parameters:
     - id: timeToReply
       type: CRMScript.Global.Integer
-      description:  The time (minutes) between when the ticket was created and when it was replied to. Calculated based on priority's time frame.
+      description: The time (minutes) between when the ticket was created and when it was replied to. Calculated based on priority's time frame.
     return:
       type: CRMScript.Global.Void
   example: 
