--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: author
       type: CRMScript.Global.String
-      description:  A string representing the author of the message. Could be a user's name, or a persons email address.
+      description: A string representing the author of the message. Could be a user's name, or a persons email address.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: contactId
       type: CRMScript.Global.Integer
-      description:  Primary key
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -375,7 +375,7 @@ items:
     parameters:
     - id: contactName
       type: CRMScript.Global.String
-      description:  Contact name
+      description: Contact name
     return:
       type: CRMScript.Global.Void
   example: 
@@ -478,7 +478,7 @@ items:
   nameWithType: NSTicketMessage.SetPersonFullName(String)
   fullName: CRMScript.NetServer.NSTicketMessage.SetPersonFullName(String)
   type: Method
-  summary: "\n.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonFullName(String personFullName)
