--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
@@ -304,8 +304,8 @@ items:
   nameWithType: NSTicketMessageEntity.GetMessageCategory()
   fullName: CRMScript.NetServer.NSTicketMessageEntity.GetMessageCategory()
   type: Method
-  summary: "\nDefines what kind of message this is.<p></p>\n<strong>Returns:</strong>TicketMessageCategory<p></p>\n<ul><li>Enum: 0 = Message</li><li>Enum: 1 = Bounce</li><li>Enum: 2 = OutboxFailed</li></ul><pre><code>NSTicketMessageEntity thing;\nTicketMessageCategory messageCategory = thing.GetMessageCategory();</code></pre>\n"
-  remarks: 
+  summary: "\nDefines what kind of message this is.\n"
+  remarks: "<ul><li>Enum: 0 = Message</li><li>Enum: 1 = Bounce</li><li>Enum: 2 = OutboxFailed</li></ul>"
   syntax: 
     content: TicketMessageCategory GetMessageCategory()
     parameters: []
@@ -323,7 +323,7 @@ items:
   nameWithType: NSTicketMessageEntity.GetMessageHeaders()
   fullName: CRMScript.NetServer.NSTicketMessageEntity.GetMessageHeaders()
   type: Method
-  summary: "\nContains the message headers, like To, Cc, Bcc information, or custom headers<p></p>\n<strong>Returns:</strong>TicketMessageHeader[]<p></p>\n<pre><code>NSTicketMessageEntity thing;\nTicketMessageHeader[] messageHeaders = thing.GetMessageHeaders();</code></pre>\n"
+  summary: "\nContains the message headers, like To, Cc, Bcc information, or custom headers\n"
   remarks: 
   syntax: 
     content: TicketMessageHeader[] GetMessageHeaders()
@@ -401,8 +401,8 @@ items:
   nameWithType: NSTicketMessageEntity.GetSlevel()
   fullName: CRMScript.NetServer.NSTicketMessageEntity.GetSlevel()
   type: Method
-  summary: "\nThe securitylevel of the message.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Internal</li><li>Enum: 2 = External</li></ul><pre><code>NSTicketMessageEntity thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
-  remarks: 
+  summary: "\nThe security level of the message.\n"
+  remarks: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Internal</li><li>Enum: 2 = External</li></ul>"
   syntax: 
     content: Integer GetSlevel()
     parameters: []
@@ -459,8 +459,8 @@ items:
   nameWithType: NSTicketMessageEntity.GetType()
   fullName: CRMScript.NetServer.NSTicketMessageEntity.GetType()
   type: Method
-  summary: "\nThe type of the message (plaintext/html).<p></p>\n<strong>Returns:</strong>TicketMessageType<p></p>\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Plain</li><li>Enum: 2 = Html</li></ul><pre><code>NSTicketMessageEntity thing;\nTicketMessageType type = thing.GetType();</code></pre>\n"
-  remarks: 
+  summary: "\nThe type of the message (plaintext/html).\n"
+  remarks: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Plain</li><li>Enum: 2 = Html</li></ul>"
   syntax: 
     content: TicketMessageType GetType()
     parameters: []
@@ -738,7 +738,7 @@ items:
   fullName: CRMScript.NetServer.NSTicketMessageEntity.SetMessageCategory()
   type: Method
   summary: "\nDefines what kind of message this is.\n"
-  remarks: "\n<p>See enum messageCategory.</p>\n"
+  remarks: "\nSee enum messageCategory.\n"
   syntax: 
     content: Void SetMessageCategory(TicketMessageCategory messageCategory)
     parameters:
@@ -838,7 +838,7 @@ items:
   fullName: CRMScript.NetServer.NSTicketMessageEntity.SetSlevel(Integer)
   type: Method
   summary: "\nThe securitylevel of the message.\n"
-  remarks: "\n<p>See enum slevel.</p>\n"
+  remarks: "\nSee enum slevel.\n"
   syntax: 
     content: Void SetSlevel(Integer slevel)
     parameters:
@@ -904,9 +904,9 @@ items:
   fullName: CRMScript.NetServer.NSTicketMessageEntity.SetType()
   type: Method
   summary: "\nThe type of the message (plaintext/html).\n"
-  remarks: "\n<p>See enum type.</p>\n"
+  remarks: "\nSee enum type.\n"
   syntax: 
-    content: Void SetType(TicketMessageType type)
+    content: Void SetType(TicketMessageType type) 
     parameters:
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nTicketMessageType type;\nthing.SetType(type);</code></pre>\n"
