--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
@@ -96,14 +96,14 @@ items:
   nameWithType: NSTypicalSearch.GetIsEntityDefault()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetIsEntityDefault()
   type: Method
-  summary: "\ny\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetIsEntityDefault()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Indicates if this is the default set of criteria for an entit
+      description: Indicates if this is the default set of criteria for an entity
   example: 
   - "\n<pre><code>NSTypicalSearch thing;\nInteger isEntityDefault = thing.GetIsEntityDefault();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTypicalSearch.GetRestrictionGroups()
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: entityName
       type: CRMScript.Global.String
-      description:  The name of the entity the typical search links to
+      description: The name of the entity the typical search links to
     return:
       type: CRMScript.Global.Void
   example: 
@@ -265,7 +265,7 @@ items:
     parameters:
     - id: includePerson
       type: CRMScript.Global.Integer
-      description:  For selection-of-company, state of the Include Main Contact checkbox
+      description: For selection-of-company, state of the Include Main Contact checkbox
     return:
       type: CRMScript.Global.Void
   example: 
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: isEntityDefault
       type: CRMScript.Global.Integer
-      description:  Indicates if this is the default set of criteria for an entity
+      description: Indicates if this is the default set of criteria for an entity
     return:
       type: CRMScript.Global.Void
   example: 
