--- a/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: checkedInByAssociateId
       type: CRMScript.Global.Integer
-      description:  Associate ID of the user who performed the check-in
+      description: Associate ID of the user who performed the check-in
     return:
       type: CRMScript.Global.Void
   example: 
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description:  Arbitrary description string
+      description: Arbitrary description string
     return:
       type: CRMScript.Global.Void
   example: 
@@ -346,14 +346,14 @@ items:
   nameWithType: NSVersionInfo.SetDocumentId(Integer)
   fullName: CRMScript.NetServer.NSVersionInfo.SetDocumentId(Integer)
   type: Method
-  summary: "\ne\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocumentId(Integer documentId)
     parameters:
     - id: documentId
       type: CRMScript.Global.Integer
-      description: The document ID that uniquely identifies the document within the SuperOffice databas
+      description: The document ID that uniquely identifies the document within the SuperOffice database
     return:
       type: CRMScript.Global.Void
   example: 
