--- a/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
@@ -220,14 +220,14 @@ items:
   nameWithType: NSWindowPosSize.GetUpperY()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetUpperY()
   type: Method
-  summary: "\nt\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetUpperY()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Y of origin, upper edge of widge
+      description: Y of origin, upper edge of widget
   example: 
   - "\n<pre><code>NSWindowPosSize thing;\nInteger upperY = thing.GetUpperY();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWindowPosSize.GetWidth()
