--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -39,7 +39,7 @@ items:
   - CRMScript.NetServer.NSBatchTaskInfo.SetIsSystemTask(Bool)
   - CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted()
   - CRMScript.NetServer.NSBatchTaskInfo.SetName(String)
-  - CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject()
+  - CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject(Map)
   - CRMScript.NetServer.NSBatchTaskInfo.SetProgressDescription(String)
   - CRMScript.NetServer.NSBatchTaskInfo.SetProgressPercent(Integer)
   - CRMScript.NetServer.NSBatchTaskInfo.SetRequest(String)
@@ -443,7 +443,7 @@ items:
   nameWithType: NSBatchTaskInfo.GetState()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetState()
   type: Method
-  summary: "\nBatchTaskState of the task.<p></p>\n<strong>Returns:</strong>Integer\n"
+  summary: "\nBatchTaskState of the task.\n"
   remarks: 
   syntax: 
     content: Integer GetState()
@@ -722,21 +722,24 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString name;\nthing.SetName(name);</code></pre>\n"
-- uid: CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject()
-  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject()
-  id: 'SetParameterObject()'
+- uid: CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject(Map)
+  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject(Map)
+  id: 'SetParameterObject(Map)'
   so.intellisense: NSBatchTaskInfo.SetParameterObject
   langs:
   - crmscript
-  name: 'SetParameterObject()'
-  nameWithType: NSBatchTaskInfo.SetParameterObject()
-  fullName: CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject()
+  name: 'SetParameterObject(Map)'
+  nameWithType: NSBatchTaskInfo.SetParameterObject(Map)
+  fullName: CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject(Map)
   type: Method
-  summary: "\nCRMScript method in the NSBatchTaskInfo class that serializes a Map to a binary blob and saves it in the BinaryObject tableParameterObject will be serialized to a binary blob and saved in the<code>BinaryObject</code>table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.<p></p>\n<code>SetParameterObject(Map parameterObject)</code>\n"
+  summary: "\nSerializes a Map to a binary blob and saves it in the BinaryObject table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.\n"
   remarks: 
   syntax: 
-    content: Void SetParameterObject()
-    parameters: []
+    content: Void SetParameterObject(Map parameterObject)
+    parameters:
+    - id: parameterObject
+      type: CRMScript.Global.Map
+      description:
     return:
       type: CRMScript.Global.Void
   example: 
@@ -884,7 +887,7 @@ items:
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetState(Integer)
   type: Method
   summary: "\nBatchTaskState of the task.\n"
-  remarks: "\n<p>See <xref href=\"CRMScript.NetServer.BatchTaskState\" data-throw-if-not-resolved=\"false\"></xref></p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.BatchTaskState\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: Void SetState(Integer state)
     parameters:
