--- a/docs/api-reference/CRMScript.NetServer.NSTicketSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketSummaryItem.yml
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTicketSummaryItem.SetTitle(String)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetTitle(String)
   type: Method
-  summary: "\n.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTitle(String title)
